Add messy code for model validation

--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -2,57 +2,34 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
+    "\n",
     "# Get party information and Twitter UIDs for politicians\n",
     "# Both CSVs were downloaded from http://twitterpoliticians.org/download\n",
     "\n",
     "import pandas as pd\n",
     "import tweepy as tw\n",
     "import numpy as np\n",
-    "from os import environ as env"
+    "from os import environ as env\n",
+    "import streamlit as st\n",
+    "from transformers import pipeline"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# # Import data\n",
-    "# members_raw = pd.read_csv(\n",
-    "#     \"data/full_member_info.csv\", encoding=\"utf16\", engine=\"python\"\n",
-    "# )\n",
-    "\n",
-    "# # Keep relevant columns\n",
-    "# members = members_raw[\n",
-    "#     [\n",
-    "#         \"country\",\n",
-    "#         \"name\",\n",
-    "#         \"party\",\n",
-    "#         \"uid\",\n",
-    "#         \"legislative_start_date\",\n",
-    "#         \"legislative_end_date\",\n",
-    "#     ]\n",
-    "# ].copy()\n",
-    "\n",
-    "# # Keep only American politicians\n",
-    "# members = members[members[\"country\"]==\"United States\"]\n",
-    "\n",
-    "# # Fill NAs with 0 so we can convert from float to int\n",
-    "# members = members.fillna(0)\n",
-    "\n",
-    "# # Convert to int\n",
-    "# members[\"uid\"] = members[\"uid\"].astype(int)\n",
-    "\n",
-    "# # Start with only getting tweets for notable politicians\n"
+    "st.title('Tweets - Republican or Democrat?')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,117 +42,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>created_at</th>\n",
-       "      <th>id</th>\n",
-       "      <th>full_text</th>\n",
-       "      <th>user.id_str</th>\n",
-       "      <th>user.name</th>\n",
-       "      <th>user.screen_name</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>Wed Oct 27 15:01:53 +0000 2021</td>\n",
-       "      <td>1453376411104956418</td>\n",
-       "      <td>Each day, let us pledge to build a future wher...</td>\n",
-       "      <td>15764644</td>\n",
-       "      <td>Nancy Pelosi</td>\n",
-       "      <td>SpeakerPelosi</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>Wed Oct 27 15:01:53 +0000 2021</td>\n",
-       "      <td>1453376409833979908</td>\n",
-       "      <td>Over the last several years, Jewish communitie...</td>\n",
-       "      <td>15764644</td>\n",
-       "      <td>Nancy Pelosi</td>\n",
-       "      <td>SpeakerPelosi</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>Wed Oct 27 15:01:52 +0000 2021</td>\n",
-       "      <td>1453376408542191616</td>\n",
-       "      <td>Today, Americans join the Jewish community of ...</td>\n",
-       "      <td>15764644</td>\n",
-       "      <td>Nancy Pelosi</td>\n",
-       "      <td>SpeakerPelosi</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>Tue Oct 26 20:00:49 +0000 2021</td>\n",
-       "      <td>1453089251999031298</td>\n",
-       "      <td>For three decades, he has offered moral and sp...</td>\n",
-       "      <td>15764644</td>\n",
-       "      <td>Nancy Pelosi</td>\n",
-       "      <td>SpeakerPelosi</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>Tue Oct 26 20:00:46 +0000 2021</td>\n",
-       "      <td>1453089240640860162</td>\n",
-       "      <td>As House Speaker, it was an honor to welcome H...</td>\n",
-       "      <td>15764644</td>\n",
-       "      <td>Nancy Pelosi</td>\n",
-       "      <td>SpeakerPelosi</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                       created_at                   id  \\\n",
-       "0  Wed Oct 27 15:01:53 +0000 2021  1453376411104956418   \n",
-       "1  Wed Oct 27 15:01:53 +0000 2021  1453376409833979908   \n",
-       "2  Wed Oct 27 15:01:52 +0000 2021  1453376408542191616   \n",
-       "3  Tue Oct 26 20:00:49 +0000 2021  1453089251999031298   \n",
-       "4  Tue Oct 26 20:00:46 +0000 2021  1453089240640860162   \n",
-       "\n",
-       "                                           full_text user.id_str  \\\n",
-       "0  Each day, let us pledge to build a future wher...    15764644   \n",
-       "1  Over the last several years, Jewish communitie...    15764644   \n",
-       "2  Today, Americans join the Jewish community of ...    15764644   \n",
-       "3  For three decades, he has offered moral and sp...    15764644   \n",
-       "4  As House Speaker, it was an honor to welcome H...    15764644   \n",
-       "\n",
-       "      user.name user.screen_name  \n",
-       "0  Nancy Pelosi    SpeakerPelosi  \n",
-       "1  Nancy Pelosi    SpeakerPelosi  \n",
-       "2  Nancy Pelosi    SpeakerPelosi  \n",
-       "3  Nancy Pelosi    SpeakerPelosi  \n",
-       "4  Nancy Pelosi    SpeakerPelosi  "
-      ]
-     },
-     "execution_count": 61,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
+    "# Get data\n",
     "SCREEN_NAMES = [\n",
     "    \"SpeakerPelosi\",\n",
     "    \"RepMaxineWaters\", \n",
@@ -221,26 +92,49 @@
     "# }, inplace=True)\n",
     "\n",
     "# Add column for political party\n",
-    "tweets_df['party'] = np.where(tweets_df['user.screen_name'].isin(DEMOCRATS) , 'democrat', 'republican')"
+    "tweets_df['party'] = np.where(tweets_df['user.screen_name'].isin(DEMOCRATS) , 'democrat', 'republican')\n",
+    "\n",
+    "st.subheader('Raw tweet data')\n",
+    "st.write(tweets_df)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "No model was supplied, defaulted to facebook/bart-large-mnli (https://huggingface.co/facebook/bart-large-mnli)\n"
+     ]
+    },
+    {
+     "ename": "RuntimeError",
+     "evalue": "At least one of TensorFlow 2.0 or PyTorch should be installed. To install TensorFlow 2.0, read the instructions at https://www.tensorflow.org/install/ To install PyTorch, read the instructions at https://pytorch.org/.",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mRuntimeError\u001b[0m                              Traceback (most recent call last)",
+      "\u001b[0;32m/var/folders/n0/_gb2zcx175v6pfdph5qdlvjmm19xcb/T/ipykernel_23801/3185806372.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m# Classify tweets\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mclassifier\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mpipeline\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"zero-shot-classification\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m~/Library/Caches/pypoetry/virtualenvs/rep-or-dem-tweets-N8FTIkF8-py3.7/lib/python3.7/site-packages/transformers/pipelines/__init__.py\u001b[0m in \u001b[0;36mpipeline\u001b[0;34m(task, model, config, tokenizer, feature_extractor, framework, revision, use_fast, use_auth_token, model_kwargs, **kwargs)\u001b[0m\n\u001b[1;32m    459\u001b[0m         \u001b[0mrevision\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mrevision\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    460\u001b[0m         \u001b[0mtask\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mtask\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 461\u001b[0;31m         \u001b[0;34m**\u001b[0m\u001b[0mmodel_kwargs\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    462\u001b[0m     )\n\u001b[1;32m    463\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/Library/Caches/pypoetry/virtualenvs/rep-or-dem-tweets-N8FTIkF8-py3.7/lib/python3.7/site-packages/transformers/pipelines/base.py\u001b[0m in \u001b[0;36minfer_framework_load_model\u001b[0;34m(model, config, model_classes, task, framework, **model_kwargs)\u001b[0m\n\u001b[1;32m    100\u001b[0m     \u001b[0;32mif\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0mis_tf_available\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mand\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0mis_torch_available\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    101\u001b[0m         raise RuntimeError(\n\u001b[0;32m--> 102\u001b[0;31m             \u001b[0;34m\"At least one of TensorFlow 2.0 or PyTorch should be installed. \"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    103\u001b[0m             \u001b[0;34m\"To install TensorFlow 2.0, read the instructions at https://www.tensorflow.org/install/ \"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    104\u001b[0m             \u001b[0;34m\"To install PyTorch, read the instructions at https://pytorch.org/.\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mRuntimeError\u001b[0m: At least one of TensorFlow 2.0 or PyTorch should be installed. To install TensorFlow 2.0, read the instructions at https://www.tensorflow.org/install/ To install PyTorch, read the instructions at https://pytorch.org/."
+     ]
+    }
+   ],
+   "source": [
+    "# Classify tweets\n",
+    "classifier = pipeline(\"zero-shot-classification\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "# # Run a test query\n",
-    "# USER_ID = \"17976923\"\n",
-    "# MAX_TWEETS = 150\n",
-    "\n",
-    "# # Creation of query method using parameters\n",
-    "# tweets = tw.Cursor(api.user_timeline, user_id=USER_ID, tweet_mode=\"extended\").items(MAX_TWEETS)\n",
-    "\n",
-    "# # Post-process tweets\n",
-    "# json_tweets = [t._json for t in tweets]\n",
-    "# tweets_df = pd.json_normalize(json_tweets)"
-   ]
+   "source": []
   }
  ],
  "metadata": {
