--- a/finetune_full_architecture_tftrainer.ipynb
+++ b/finetune_full_architecture_tftrainer.ipynb
@@ -813,6 +813,9 @@
     {
       "cell_type": "code",
       "source": [
+        "# Only enter when needed\n",
+        "hub_password = \"xxxx\"\n",
+        "\n",
         "# Configure git settings\n",
         "!git config --global user.email \"mary.newhauser@gmail.com\"\n",
         "!git config --global user.name \"m-newhauser\"\n",
@@ -821,7 +824,7 @@
         "saved_model = TFDistilBertForSequenceClassification.from_pretrained(save_model_path)\n",
         "\n",
         "# Set the repo url username:password\n",
-        "repo_url = \"https://m-newhauser:Ilovelola11*@huggingface.co/m-newhauser/distilbert-political-tweets\"\n",
+        "repo_url = f\"https://m-newhauser:{hub_password}@huggingface.co/m-newhauser/distilbert-political-tweets\"\n",
         "\n",
         "# Now push the tokenizer to the hub\n",
         "tokenizer.push_to_hub(repo_url=repo_url)\n",
@@ -840,7 +843,7 @@
       "collapsed_sections": [],
       "name": "finetune_full_architecture_tftrainer.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyPgvKImEK+VhtpocJSZuXuD",
+      "authorship_tag": "ABX9TyP5LX8PrthssCUAOSB9weNM",
       "include_colab_link": true
     },
     "kernelspec": {
