--- a/notebooks/finetune_distilbert_senator_tweets_pt.ipynb
+++ b/notebooks/finetune_distilbert_senator_tweets_pt.ipynb
@@ -1666,7 +1666,7 @@
             "Password: \n",
             "ERROR:root:HfApi.login: This method is deprecated in favor of `set_access_token`.\n",
             "Login successful\n",
-            "Your token: aBSsFWbqJRmQMbVYegoDJqSgfLXfcUmyhctMKGqPpJbIyjlXvycKNvnBprjxWutvVtjTDBoRDafcLDRlDrFRwOrwjcVZCxWkpBIONAUavmeYFltVHdWaqPeMiTPgHuiT \n",
+            "Your token: *****\n",
             "\n",
             "Your token has been saved to /root/.huggingface/token\n"
           ]
